{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 80,
  "lineage": "bd1268ef-cbde-f884-f0e0-e65901a3b83b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "foodstore-tf-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:940514535313:internet-gateway/igw-0056cb6fa037bf7c1",
            "id": "igw-0056cb6fa037bf7c1",
            "owner_id": "940514535313",
            "region": "ap-southeast-3",
            "tags": {
              "Name": "foodstore-tf-igw"
            },
            "tags_all": {
              "Name": "foodstore-tf-igw",
              "Owner": "nathanael",
              "Project": "test terraform",
              "Service": "create-by-terraform"
            },
            "vpc_id": "vpc-04ceabc89504a5e6d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.foodstore-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "foodstore-tf-private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:940514535313:route-table/rtb-069a9acd04dcba034",
            "id": "rtb-069a9acd04dcba034",
            "owner_id": "940514535313",
            "propagating_vgws": [],
            "region": "ap-southeast-3",
            "route": [],
            "tags": {
              "Name": "foodstore-tf-private-rtb"
            },
            "tags_all": {
              "Name": "foodstore-tf-private-rtb",
              "Owner": "nathanael",
              "Project": "test terraform",
              "Service": "create-by-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceabc89504a5e6d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "940514535313",
            "id": "rtb-069a9acd04dcba034",
            "region": "ap-southeast-3"
          },
          "dependencies": [
            "aws_vpc.foodstore-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "foodstore-tf-private-rtb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:940514535313:route-table/rtb-0d40229afe5c5685a",
            "id": "rtb-0d40229afe5c5685a",
            "owner_id": "940514535313",
            "propagating_vgws": [],
            "region": "ap-southeast-3",
            "route": [],
            "tags": {
              "Name": "foodstore-tf-private-rtb2"
            },
            "tags_all": {
              "Name": "foodstore-tf-private-rtb2",
              "Owner": "nathanael",
              "Project": "test terraform",
              "Service": "create-by-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceabc89504a5e6d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "940514535313",
            "id": "rtb-0d40229afe5c5685a",
            "region": "ap-southeast-3"
          },
          "dependencies": [
            "aws_vpc.foodstore-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "foodstore-tf-public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:940514535313:route-table/rtb-09c7189097938fdcb",
            "id": "rtb-09c7189097938fdcb",
            "owner_id": "940514535313",
            "propagating_vgws": [],
            "region": "ap-southeast-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0056cb6fa037bf7c1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "foodstore-tf-public-rtb"
            },
            "tags_all": {
              "Name": "foodstore-tf-public-rtb",
              "Owner": "nathanael",
              "Project": "test terraform",
              "Service": "create-by-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceabc89504a5e6d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "940514535313",
            "id": "rtb-09c7189097938fdcb",
            "region": "ap-southeast-3"
          },
          "dependencies": [
            "aws_internet_gateway.foodstore-tf-igw",
            "aws_vpc.foodstore-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "foodstore-tf-public-rtb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:940514535313:route-table/rtb-0d53ce9d9c47c2926",
            "id": "rtb-0d53ce9d9c47c2926",
            "owner_id": "940514535313",
            "propagating_vgws": [],
            "region": "ap-southeast-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0056cb6fa037bf7c1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "foodstore-tf-public-rtb2"
            },
            "tags_all": {
              "Name": "foodstore-tf-public-rtb2",
              "Owner": "nathanael",
              "Project": "test terraform",
              "Service": "create-by-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceabc89504a5e6d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "940514535313",
            "id": "rtb-0d53ce9d9c47c2926",
            "region": "ap-southeast-3"
          },
          "dependencies": [
            "aws_internet_gateway.foodstore-tf-igw",
            "aws_vpc.foodstore-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-private-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02aa0f75005e3b6a5",
            "region": "ap-southeast-3",
            "route_table_id": "rtb-069a9acd04dcba034",
            "subnet_id": "subnet-0afa4cd1a57e5a5e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.foodstore-tf-private-rtb",
            "aws_subnet.foodstore-tf-private-subnet",
            "aws_vpc.foodstore-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-private-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d2bd4030f495497",
            "region": "ap-southeast-3",
            "route_table_id": "rtb-0d40229afe5c5685a",
            "subnet_id": "subnet-0d545d001b2c84558"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.foodstore-tf-private-rtb2",
            "aws_subnet.foodstore-tf-private-subnet2",
            "aws_vpc.foodstore-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-public-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091b351bb78141e90",
            "region": "ap-southeast-3",
            "route_table_id": "rtb-09c7189097938fdcb",
            "subnet_id": "subnet-0e149cfadc44e3378"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.foodstore-tf-igw",
            "aws_route_table.foodstore-tf-public-rtb",
            "aws_subnet.foodstore-tf-public-subnet",
            "aws_vpc.foodstore-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-public-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc77b3fb5ea156cc",
            "region": "ap-southeast-3",
            "route_table_id": "rtb-0d53ce9d9c47c2926",
            "subnet_id": "subnet-09340c642400c965e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.foodstore-tf-igw",
            "aws_route_table.foodstore-tf-public-rtb2",
            "aws_subnet.foodstore-tf-public-subnet2",
            "aws_vpc.foodstore-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "foodstore-tf-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:940514535313:subnet/subnet-0afa4cd1a57e5a5e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3c",
            "availability_zone_id": "apse3-az3",
            "cidr_block": "10.2.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0afa4cd1a57e5a5e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940514535313",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-3",
            "tags": {
              "Name": "foodstore-tf-private-subnet"
            },
            "tags_all": {
              "Name": "foodstore-tf-private-subnet",
              "Owner": "nathanael",
              "Project": "test terraform",
              "Service": "create-by-terraform"
            },
            "vpc_id": "vpc-04ceabc89504a5e6d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "940514535313",
            "id": "subnet-0afa4cd1a57e5a5e0",
            "region": "ap-southeast-3"
          },
          "dependencies": [
            "aws_vpc.foodstore-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "foodstore-tf-private-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:940514535313:subnet/subnet-0d545d001b2c84558",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3a",
            "availability_zone_id": "apse3-az1",
            "cidr_block": "10.2.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d545d001b2c84558",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940514535313",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-3",
            "tags": {
              "Name": "foodstore-tf-private-subnet2"
            },
            "tags_all": {
              "Name": "foodstore-tf-private-subnet2",
              "Owner": "nathanael",
              "Project": "test terraform",
              "Service": "create-by-terraform"
            },
            "vpc_id": "vpc-04ceabc89504a5e6d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "940514535313",
            "id": "subnet-0d545d001b2c84558",
            "region": "ap-southeast-3"
          },
          "dependencies": [
            "aws_vpc.foodstore-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "foodstore-tf-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:940514535313:subnet/subnet-0e149cfadc44e3378",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3c",
            "availability_zone_id": "apse3-az3",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e149cfadc44e3378",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940514535313",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-3",
            "tags": {
              "Name": "foodstore-tf-public-subnet"
            },
            "tags_all": {
              "Name": "foodstore-tf-public-subnet",
              "Owner": "nathanael",
              "Project": "test terraform",
              "Service": "create-by-terraform"
            },
            "vpc_id": "vpc-04ceabc89504a5e6d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "940514535313",
            "id": "subnet-0e149cfadc44e3378",
            "region": "ap-southeast-3"
          },
          "dependencies": [
            "aws_vpc.foodstore-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "foodstore-tf-public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:940514535313:subnet/subnet-09340c642400c965e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3a",
            "availability_zone_id": "apse3-az1",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09340c642400c965e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940514535313",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-3",
            "tags": {
              "Name": "foodstore-tf-public-subnet2"
            },
            "tags_all": {
              "Name": "foodstore-tf-public-subnet2",
              "Owner": "nathanael",
              "Project": "test terraform",
              "Service": "create-by-terraform"
            },
            "vpc_id": "vpc-04ceabc89504a5e6d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "940514535313",
            "id": "subnet-09340c642400c965e",
            "region": "ap-southeast-3"
          },
          "dependencies": [
            "aws_vpc.foodstore-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "foodstore-vpc-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:940514535313:vpc/vpc-04ceabc89504a5e6d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-01e9a36b852e710fd",
            "default_route_table_id": "rtb-017b28f06672e9d59",
            "default_security_group_id": "sg-0485f9c5780b2eec5",
            "dhcp_options_id": "dopt-0424f5b2e9090a97d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04ceabc89504a5e6d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-017b28f06672e9d59",
            "owner_id": "940514535313",
            "region": "ap-southeast-3",
            "tags": {
              "Name": "foodstore-terraform"
            },
            "tags_all": {
              "Name": "foodstore-terraform",
              "Owner": "nathanael",
              "Project": "test terraform",
              "Service": "create-by-terraform"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "940514535313",
            "id": "vpc-04ceabc89504a5e6d",
            "region": "ap-southeast-3"
          }
        }
      ]
    }
  ]
}